CFN7.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: SSM Parameterstore parameterization demo

Parameters:
    MyKeyName:
        Description: "Select the key name"
        Type: AWS::EC2::KeyPair::KeyName          
    MyAvailabilityZone:
        Description: "Select the AZ"
        Type: String
        Default: "us-east-1c"
        AllowedValues:
            - us-east-1a
            - us-east-1b
            - us-east-1c
            - us-east-1d
            - us-east-1e
            - us-east-1f    
    MyInstanceType:
        Description: "Select the EC2 Instance Type from SSM Parameter"
        Type: AWS::SSM::Parameter::Value<String>

Resources:
    CFT1Instance:
        Type: AWS::EC2::Instance
        Properties:
            ImageId: ami-0a887e401f7654935
            InstanceType: !Ref MyInstanceType
            KeyName: !Ref MyKeyName
            AvailabilityZone: !Ref MyAvailabilityZone
            SecurityGroups: 
                - default
                - !Ref SSHSecurityGroup
    SSHSecurityGroup:
        Type: AWS::EC2::SecurityGroup   
        Properties: 
            GroupDescription: "My new SSH SG"
            SecurityGroupIngress:
                -   IpProtocol: tcp
                    FromPort: 22
                    ToPort: 22
                    CidrIp: 0.0.0.0/0
                -   IpProtocol: tcp
                    FromPort: 80
                    ToPort: 80
                    CidrIp: 0.0.0.0/0
    CFT1EIP:
        Type: AWS::EC2::EIP
        Properties:
            InstanceId: !Ref CFT1Instance
